Closed
Bug 1484521
Opened 7 years ago
Closed 7 years ago
Misplaced list markers with text-align:justify
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | + | fixed |
People
(Reporter: aguertin+bugzilla, Assigned: xidorn)
References
Details
(Keywords: regression)
Attachments
(3 files)
63.0a1 (2018-08-18) (64-bit), linux
When a ul or ol (or its container) has text-align: justify, the list markers are misplaced. This is a regression, it does not occur in 61.0.2
First noticed using the Brief addon to read RSS feeds.
| Reporter | ||
Updated•7 years ago
|
Attachment #9002280 -
Attachment mime type: text/plain → text/html
| Reporter | ||
Comment 1•7 years ago
|
||
Narrowed the regression range to between the 2018-08-12-22 and 2018-08-13-10 nightlies.
| Reporter | ||
Comment 2•7 years ago
|
||
Best guess: regression from bug 1478178
Flags: needinfo?(xidorn+moz)
[Tracking Requested - why for this release]: This is a layout regression that I'd prefer not to ship.
tracking-firefox63:
--- → ?
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → xidorn+moz
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(xidorn+moz)
| Assignee | ||
Comment 4•7 years ago
|
||
Bug 1478178 regressed this case because bullet frame is the last frame
added to line layout, rather than the first, so when we try to apply
justification, we end up giving it the accumulated offset of the whole
line.
Bullet frame has to be added after other frames in the line has been
placed, because its ppresence may depend on whether the line is empty.
However, bullet frame is logically the first element in a line and
appending it to the end is somehow counter-intuitive.
Thus, this patch fixes the issue via prepending bullet frame in line
layout, so that the order of frames there can be a bit more reliable.
Comment 5•7 years ago
|
||
Affects `text-align: right` as well, quite predictably.
| Assignee | ||
Comment 6•7 years ago
|
||
I think the behavior of `text-align: right` is intentional, or at least not a recent regression. If you think that behavior is wrong, it's probably better file a new bug for it.
Tracked for 63 as it's a recent regression.
status-firefox63:
--- → affected
Comment 10•7 years ago
|
||
Comment on attachment 9002373 [details]
Bug 1484521 - Prepend bullet frame in line layout. r=dholbert
Jonathan Kew (:jfkthame) has approved the revision.
Attachment #9002373 -
Flags: review+
Comment 11•7 years ago
|
||
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5c420838bf52
Prepend bullet frame in line layout. r=jfkthame
Comment 12•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•7 years ago
|
status-firefox61:
--- → unaffected
status-firefox62:
--- → unaffected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•